--- a/app/views/home/hero/_hero_unit.html.erb
+++ b/app/views/home/hero/_hero_unit.html.erb
@@ -1,9 +1,9 @@
 <%# 'region' is for ARIA see: https://dequeuniversity.com/assets/html/jquery-summit/html5/slides/landmarks.html %>
-<div class="section" role="region">
+<div class="row" role="region">
   <div class="hero-unit">
 
-    <div class="content-container">
-      <div class="content-row">
+    <div class="container">
+      <div class="row">
         <div class="hero-banner">
 
           <h1 class="big-slogan" data-sr="enter from the top and hustle 50px over 1.5s"><%= t('home.hero_unit.slogan_html') %></h1>
