--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-sm-6 ">
+<%= form_wrapper do %>
     <h1>Change your password</h1>
 
     <%= form_for(resource, :as => resource_name, 
@@ -38,6 +37,4 @@
       <% end %>
 
       <%= render "devise/shared/links" %>
-
-    </div>
-  </div>
+<% end %>
