--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-sm-6 ">
+<%= form_wrapper do %>
     <h1>Forgot your password?</h1>
 
     <%= form_for(resource, :as => resource_name, 
@@ -26,5 +25,4 @@
       <% end %>
 
       <%= render "devise/shared/links" %>
-    </div>
-  </div>
+<% end %>
