--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-sm-6 ">
+<%= form_wrapper do %>
     <%= form_title("edit_profile") %>
 
     <%= form_for(resource, :as => resource_name, 
@@ -59,5 +58,4 @@
       </div>    
  
       <% end %>
-    </div>
-  </div>
+<% end %>
