--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-sm-6">
+<%= form_wrapper do %>
     <%= form_title("sign_up") %>
 
     <%= form_for(resource, :as => resource_name, 
@@ -43,6 +42,4 @@
       <% end %>
 
       <%= render "devise/shared/links" %>
-
-    </div>
-  </div>
+<% end %>
