--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-sm-6">
+<%= form_wrapper do %>
     <h1>Resend unlock instructions</h1>
 
     <%= form_for(resource, :as => resource_name,
@@ -28,6 +27,4 @@
     <% end %>
 
     <%= render "devise/shared/links" %>
-
-  </div>
-</div>
+<% end %>
