--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,21 +5,27 @@
 
 <% content_for :additional_scripts do %>
     <script type="text/javascript">
-        $(".has-clear-icon").bind("keyup focus", function () {
-            var t = $(this);
-            t.next('span').toggle(Boolean(t.val()));
-        });
+        $(document).ready(function($) {
+            if ($(".has-clear-icon").val()) {
+                $(".clear-icon").show();
+            } else {
+                $(".clear-icon").hide();
+            }
 
-        $(".clear-icon").hide($(this).prev('input').val());
+            $(".has-clear-icon").bind("keyup focus", function () {
+                var t = $(this);
+                t.next('span').toggle(Boolean(t.val()));
+            });
 
-        $(".clear-icon").click(function () {
-            $(this).prev('input').val('').focus();
-            $(this).hide();
-            $("#project-search-form").submit();
-        });
+            $(".clear-icon").click(function () {
+                $(this).prev('input').val('').focus();
+                $(this).hide();
+                $("#project-search-form").submit();
+            });
 
-        $("#project-search-category").bind("change", function () {
-            $("#project-search-form").submit();
+            $("#project-search-category").bind("change", function () {
+                $("#project-search-form").submit();
+            });
         });
     </script>
 <% end %>
