upgraded Minitest; added spin.js; project grid display fixed

--- a/app/views/projects/_projects_grid.html.erb
+++ b/app/views/projects/_projects_grid.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <% row.each do |project| %>
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="center-block">
             <%= render partial: 'projects/block', locals: {project: project} %>
           </div>
