--- a/assets/stylesheets/modules/_project-block.scss
+++ b/assets/stylesheets/modules/_project-block.scss
@@ -7,7 +7,7 @@ $project-block-adjust-height: 15px !default;
 .project-block {
   background-color: white;
   border: 1px solid #d9d9de;
-  border-radius: 6px;
+  //border-radius: 6px;
   //color: #828587;
   font-size: 12px;
   line-height: 1.5;
@@ -22,7 +22,7 @@ $project-block-adjust-height: 15px !default;
   height: 165px;
   width: 100%;
   overflow: hidden;
-  border-radius: 6px 6px 0 0;
+  //border-radius: 6px 6px 0 0;
   background-color: #e1e1e1;
   text-align: center;
 }
