--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -28,7 +28,7 @@
             });
 
             $("#project-search-form").bind("submit", function () {
-                var spinner = new Spinner().spin(document.body);
+                new Spinner().spin(document.body);
             });
         });
     </script>
