bugfix: don't load non-existing Google font (performance bug)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,8 @@
   <script>
       WebFont.load({
           google: {
-              families: ['Open Sans', 'Helvetica Neue']
+              families: ['Open Sans']
+              /*families: ['Open Sans', 'Helvetica Neue']*/
           }
       });
   </script>
