--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -1,21 +1,9 @@
-<li class="dropdown">
-  <a href="#" data-toggle="dropdown" class="dropdown-toggle "><%= t("navbar.projects") %></a>
-
-  <ul class="dropdown-menu">
-    <li><%= nav_link("search_projects", projects_path) %></li>
-    <li><%= nav_link("create_project", nil) %></li>
-  </ul>
+<li>
+  <%= nav_link("projects", projects_path) %>
 </li>
 
-<li class="dropdown">
-  <a href="#" data-toggle="dropdown" class="dropdown-toggle "><%= t("navbar.how_it_works") %></a>
-
-  <ul class="dropdown-menu">
-    <li><%= nav_link("how_it_works", how_it_works_path) %></li>
-    <li><%= nav_link("about_us", about_us_path) %></li>
-    <li><%= nav_link("contact", contact_path) %></li>
-    <li><%= nav_link("sitemap", sitemap_path) %></li>
-  </ul>
+<li>
+  <%= nav_link("how_it_works", how_it_works_path) %>
 </li>
 
 <% if user_signed_in? %>
