--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "modules/footer";
 @import "modules/hero";
 @import "modules/navbar";
+@import "modules/project";
 @import "modules/project-block";
 @import "modules/other";
 
