--- a/app/views/projects/_block.html.erb
+++ b/app/views/projects/_block.html.erb
@@ -1,13 +1,13 @@
 <div class="project-block center-block">
   <div class="project-block-thumbnail"> <!--img-thumbnail img-responsive"-->
     <%#
-        We use: "image_tag project.main_image.url", which is the same as: "image_tag project.main_image.url :prethumb".
+        We use: "image_tag project.image.url", which is the same as: "image_tag project.image.url :prethumb".
 
         This is the same because we configured ':prethumb' as the default style in config/paperclip_default.rb.
 
         If you want another style, e.g. you want to display the original image, then you can still write:
 
-        "image_tag project.main_image.url :original".
+        "image_tag project.image.url :original".
     %>
     <%= image_tag project.image.url, class: "project-block-image" %>
   </div>
