--- a/assets/stylesheets/modules/_hero.scss
+++ b/assets/stylesheets/modules/_hero.scss
@@ -95,7 +95,7 @@ $call-to-action-font-size-small: 13px;
   width: 160px;
 
   // CSS transition effect from http://bootstrapbay.com/blog/css-transitions-buttons/
-  transition: all 0.6s ease 0.5s;
+  //transition: all 0.6s ease 0.5s;
 
   &:hover {
     background: #fd6703;
