--- a/assets/stylesheets/modules/_other.scss
+++ b/assets/stylesheets/modules/_other.scss
@@ -2,6 +2,28 @@
 // Other styles which don't (yet) fit anywhere else, mixed bag of goodies ...
 // --------------------------------------------------
 
+//
+// 3D transform effects on buttons, also works on iOS/Mobile Safari with "tap" event.
+//
+// Note:
+//
+// We need to add both the CSS class 'btn-transform-on-hover' AND the 'ontouchstart="return true;"' attribute to a
+// button to make the 3D transform of the button work when tapping it on touch devices (iPhone etc); for other
+// (non-touch) devices, the CSS class is enough. Technique taken from:
+//
+// http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
+//
+.btn-transform-on-hover:hover, .btn-transform-on-hover:active {
+  -webkit-transform: scale3d(0.9, 0.9, 1);
+  -moz-transform: scale3d(0.9, 0.9, 1);
+  -ms-transform: scale3d(0.9, 0.9, 1);
+  transform: scale3d(0.9, 0.9, 1);
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+
 // Scroll-to-top button, taken from shortcodes.css from  EVOLVE theme by alphawd (see also: Actra-next website)
 .btn-scroll-to-top:before, .btn-scroll-to-bottom:before {
   color: #b8bcc0;
